# Resume-RAG

./: .env.txt  .gitignore  EnvironmentSetup  EnvironmentSetup.md  PrerequisiteApps.md  README.md  environment.yml  pyproject.toml
PrerequisiteApps/: README.md
data/: experience.json  projects.json
src/: coding-guide.ipynb  embedding_data.ipynb  example.ipynb  main.ipynb
